--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </table>
     <ol>
       <li>
-        <a href="index1310.html">LATIHAN HTML 13 Oktober 2024</a>
+        <a href="index1310.html">TUGAS PRAKTIKUM 1</a>
       </li>
       <li>
-        <a href="index2010.html">LATIHAN XML 20 Oktober 2024</a>
+        <a href="index2010.html">TUGAS PRAKTIKUM 2</a>
       </li>
 	
   </body>
