--- a/index2010.html
+++ b/index2010.html
@@ -27,6 +27,6 @@
       </li>
       </li>
     </ol>
-    <button onclick="history.go(-1)">Go Back</button>
+    <button onclick="history.go(-1)">Kembali</button>
   </body>
 </html>
