--- a/index1310.html
+++ b/index1310.html
@@ -39,9 +39,7 @@
       </li>
     </ol>
 
-    <a href="merge.html">Gabungan</a>
-    <br/><br/>
-    <button onclick="history.go(-1)">Kembali</button>
+    <a href="merge.html">GABUNGAN</a>
   </body>
   
 </html>
